[package]
name = "raytx"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
dotenvy = "0.15.7"
clap = { version = "4.5.7", features = ["derive"] }
reqwest = { version = "0.11.27", features = ["json"] }
tokio = { version = "1.38.0", features = ["full"] }
serde = "1.0.203"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde_json = "1.0.117"
rust_decimal = "1.35.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
solana-client = "1.18.17"
solana-sdk = "1.18.17"
solana-account-decoder = "1.18.17"
spl-token-client = "=0.8.0"

[dev-dependencies]
ctor = "0.2.8"
