[package]
name = "raytx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
dotenvy = "0.15.7"
clap = { version = "4.5.28", features = ["derive"] }
reqwest = { version = "0.11.27", features = ["json", "socks", "native-tls"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = "1.0.217"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde_json = "1.0.138"
rust_decimal = "1.36.0"
spl-token = { version = "=4.0.0", features = ["no-entrypoint"] }
solana-client = "=1.16.27"
solana-sdk = "=1.16.27"
solana-account-decoder = "=1.16.27"
spl-token-client = "=0.7.1"
amm-cli = { git = "https://github.com/raydium-io/raydium-library", rev = "72a22dc" }
common = { git = "https://github.com/raydium-io/raydium-library", rev = "72a22dc" }

raydium_amm = { git = "https://github.com/raydium-io/raydium-amm", rev = "ba702b6", default-features = false, features = [
    "client",
] }
spl-token-2022 = { version = "0.9.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.2.0", features = [
    "no-entrypoint",
] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
futures-util = "0.3.31"

jito-json-rpc-client = { git = "https://github.com/wisarmy/jito-block-engine-json-rpc-client.git", rev="6200b83", package = "jito-block-engine-json-rpc-client" }
rand = "0.8.5"
indicatif = "0.17.11"
axum = { version = "0.7.9", features = ["macros"] }
tower-http = { version = "0.5.2", features = ["cors"] }
borsh = { version = "1.5.5" }
borsh-derive = "1.5.5"

[dev-dependencies]
ctor = "0.2.9"


[features]
slow_tests = []
